syntax = "proto3";

package proto;

option java_outer_classname = "AdminProtoMessage";


message HouseIdProto {
    string id = 1;
}

message HouseIdListProto {
    repeated HouseIdProto house = 1;
}

message MeasurementProto {
    double value = 1;
    int64 timestamp = 2;
}

message MeasurementListProto {
    repeated MeasurementProto measurement = 1;
}

message StatisticProto {
    double standardDeviation = 1;
    double arithmeticMean = 2;
}
